--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -1,12 +1,15 @@
-/* This CSS file controls the styling of the html element */
-html {
-  scroll-behavior: smooth;
+/* This CSS file controls the styling of the html element and defines custom properties */
+:root {
   --color-primary: #d73953;
   --color-black: #090909;
   --color-white: #ffffff;
   --color-light-grey: #f3f3f3;
   --color-dark-grey: #353535;
   --text-color: var(--color-black);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
