--- a/0x02-CSS_advanced/styles/12-style.css
+++ b/0x02-CSS_advanced/styles/12-style.css
@@ -1,20 +1,18 @@
-/* This CSS file controls the styling of the html element */
-html {
-  scroll-behavior: smooth;
+/* This CSS file controls the styling of the html element and defines custom properties */
+:root {
   --color-primary: #d73953;
   --color-black: #090909;
   --color-white: #ffffff;
   --color-light-grey: #f3f3f3;
   --color-dark-grey: #353535;
   --text-color: var(--color-black);
-  --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
   --font-size-small: 1.2rem;
   --font-size-medium: 1.6rem;
   --font-size-large: 1.8rem;
   --font-size-x-large: 2.3rem;
   --font-size-xx-large: 4.8rem;
-  font-size: 62.5%;
   --font-weight-regular: 400;
   --font-weight-bold: 700;
   --line-height-small: 1.2;
@@ -24,6 +22,11 @@ html {
   --section-tagline-transform: uppercase;
   --section-title-margin: 0;
   --section-title-color: var(--color-black);
+}
+
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
 }
 
 body {
@@ -48,10 +51,6 @@ a {
   display: none;
 }
 
-.card-category {
-  color: var(--color-primary);
-}
-
 .section-header {
   text-align: var(--section-header-align);
 }
@@ -64,9 +63,13 @@ a {
   color: var(--section-title-color);
 }
 
+.card-category {
+  color: var(--color-primary);
+}
+
 .section-tagline {
+  color: var(--color-primary);
   font-family: var(--font-family-title);
   text-transform: var(--section-tagline-transform);
   font-weight: var(--font-weight-bold);
-  color: var(--color-primary);
 }
