--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -1,25 +1,28 @@
-/* This CSS file controls the styling of the html element */
-html {
-  scroll-behavior: smooth;
+/* This CSS file controls the styling of the html element and defines custom properties */
+:root {
   --color-primary: #d73953;
   --color-black: #090909;
   --color-white: #ffffff;
   --color-light-grey: #f3f3f3;
   --color-dark-grey: #353535;
   --text-color: var(--color-black);
-  --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
   --font-size-small: 1.2rem;
   --font-size-medium: 1.6rem;
   --font-size-large: 1.8rem;
   --font-size-x-large: 2.3rem;
   --font-size-xx-large: 4.8rem;
-  font-size: 62.5%;
   --font-weight-regular: 400;
   --font-weight-bold: 700;
   --line-height-small: 1.2;
   --line-height-base: 1.5;
   --line-height-big: 1.8;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
 }
 
 body {
@@ -37,7 +40,6 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   color: var(--text-color);
-  text-decoration: none; /* Remove default text decoration (underline) */
 }
 
 .visually-hidden {
